--- a/server/public/main.css
+++ b/server/public/main.css
@@ -40,7 +40,7 @@ body {
 }
 
 
-p,h4 {
+p,h4 ,th{
     font-family: 'Indie Flower', cursive;
     font-size: 20px;
     font-weight: 600;
@@ -79,9 +79,7 @@ ul {
     margin-left: 20%;
     margin-right: 20%
   }
-  #rubbish{
-      border-radius: 20px
-  }
+
   .spin {
 
   display: block;
